--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ body {
   font-size: 15pt;
 }
 
-#trackingButton:hover, #nextLandmarkButton:hover {
+#nextLandmarkButton:hover {
   background-color: rgba(255, 255, 255, 0.5);
 }
 
